--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "lunr": "^0.7.1",
     "vue": "^1.0.21",
     "vue-router": "^0.7.13",
     "vue-validator": "^2.1.4",
@@ -54,9 +55,11 @@
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^2.4.5",
+    "node-sass": "^3.8.0",
     "ora": "^0.2.0",
     "phantomjs-prebuilt": "^2.1.3",
     "pug": "^2.0.0-beta4",
+    "sass-loader": "^4.0.0",
     "shelljs": "^0.6.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
