--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "elasticlunr": "^0.9.0",
     "lunr": "^0.7.1",
     "vue": "^1.0.21",
+    "vue-focus": "^0.1.1",
     "vue-router": "^0.7.13",
     "vue-validator": "^2.1.4",
     "vuex": "^1.0.0-rc.2"
