--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "cuid": "^1.3.8",
     "elasticlunr": "^0.9.0",
     "lunr": "^0.7.1",
     "vue": "^1.0.21",
