--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-focus": "^0.1.1",
     "vue-router": "^0.7.13",
     "vue-validator": "^2.1.4",
+    "vuefire": "^1.3.0",
     "vuex": "^1.0.0-rc.2"
   },
   "devDependencies": {
