--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.7.1",
+    "eslint-config-airbnb-base": "^9.0.0",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-html": "^1.3.0",
+    "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -59,10 +61,12 @@
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
+    "node-sass": "^3.10.1",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
     "pug": "^2.0.0-beta6",
+    "sass-loader": "^4.0.2",
     "shelljs": "^0.7.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
